fix: image will be overflow if it's large in reading/editing chapter

--- a/packages/webapp/src/components/ReadingPanel/index.less
+++ b/packages/webapp/src/components/ReadingPanel/index.less
@@ -2,4 +2,10 @@
   line-height: calc(1ex / 0.32);
   text-align: justify;
   hyphens: auto;
+
+  img {
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
 }
