--- a/packages/webapp/src/index.less
+++ b/packages/webapp/src/index.less
@@ -38,3 +38,11 @@ body {
 .rs-alert.rs-alert-container .rs-alert-item-wrapper {
   margin-left: 0;
 }
+
+.mde-preview-content {
+  img {
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
+}
